data/derived/sp14/progs/unify/prog4636.ml.out
Characters 76-93:
  | Sine e -> pi*.eval(e,VarX,VarY)
                  ^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
